adding device routes

--- a/package.json
+++ b/package.json
@@ -27,5 +27,20 @@
   "devDependencies": {
     "@types/react-modal": "^3.16.0",
     "react-modal": "^3.16.1"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ceres-app/ceres-app.git"
+  },
+  "keywords": [
+    "ceres"
+  ],
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ceres-app/ceres-app/issues"
+  },
+  "homepage": "https://github.com/ceres-app/ceres-app#readme"
 }
